--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-endPoint = localhost:8080
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://ec2-52-31-94-195.eu-west-1.compute.amazonaws.com:5432/dsukccea4ohgk
 spring.datasource.username=ezkezvagyuyhsn
@@ -8,4 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+jwt.token.secret = jwtprodddjectng
+jwt.token.expired = 36000000
